--- a/viz.Rmd
+++ b/viz.Rmd
@@ -724,7 +724,7 @@ However, that will not work well for this particular visualization
 because the legend labels are quite long 
 and would run off the page if displayed this way.
 
-```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=5, fig.width = 6, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
+```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=5, fig.width = 5.5, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
@@ -770,7 +770,7 @@ this makes the scatter point shapes different for each category. This kind of
 visual redundancy&mdash;i.e., conveying the same information with both scatter point color and shape&mdash;can
 further improve the clarity and accessibility of your visualization.
 
-```{r scatter-color-by-category-palette, fig.height=5, fig.width = 6, fig.align = "center", warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
+```{r scatter-color-by-category-palette, fig.height=5, fig.width = 5.5, fig.align = "center", warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category, 
@@ -895,7 +895,7 @@ the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom
 shown in Figure \@ref(fig:03-data-islands-bar).
 \index{ggplot!geom\_bar}
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.width=5, fig.height=4, fig.align = "center", fig.cap = "Bar plot of all Earth's landmasses' size with squished labels."}
 islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
   geom_bar(stat = "identity")
 
@@ -914,7 +914,7 @@ space, we'll use horizontal bars instead of vertical ones. We do this by
 swapping the `x` and `y` variables:
 \index{slice\_max}
 
-```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses."}
+```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.width=5, fig.height=3, fig.align = "center", fig.cap = "Bar plot of size for Earth's largest 12 landmasses."}
 islands_top12 <- slice_max(islands_df, order_by = size, n = 12)
 islands_bar <- ggplot(islands_top12, aes(x = size, y = landmass)) +
   geom_bar(stat = "identity") 
@@ -957,7 +957,7 @@ Thus we use the `fill` argument inside `labs` to change that to "Type."
 Finally, we again \index{ggplot!reorder} use the `theme` function 
 to change the font size.
 
-```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width = 8, fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels."}
+```{r 03-data-islands-bar-4, warning = FALSE, message = FALSE, fig.width=8, fig.align="center", fig.cap = "Bar plot of size for Earth's largest 12 landmasses colored by whether its a continent with clearer axes and labels."}
 islands_bar <- ggplot(islands_top12, 
                       aes(x = size,
                           y = fct_reorder(landmass, size, .desc = TRUE), 
