--- a/viz.Rmd
+++ b/viz.Rmd
@@ -5,6 +5,8 @@ library(tidyverse)
 library(cowplot)
 library(knitr)
 library(kableExtra)
+library(magick)
+
 
 knitr::opts_chunk$set(fig.align = "center")
 ```
@@ -289,10 +291,11 @@ default settings.
 (ref:03-ggplot-function-scatter) Creating a scatter plot with the `ggplot` function.
 
 ```{r 03-ggplot-function-scatter, echo = FALSE, fig.cap = "(ref:03-ggplot-function-scatter)", message = FALSE, out.width = "100%"}
-knitr::include_graphics("img/ggplot_function_scatter.jpeg")
+image_read("img/ggplot_function_scatter.jpeg") |>
+  image_crop("1625x1900")
 ```
 
-```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center", fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time."}
+```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Scatter plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_scatter <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_point()
 
@@ -323,7 +326,7 @@ Let's now try to visualize the `co2_df` as a line plot
 with just the default arguments: 
 \index{ggplot!geom\_line}
 
-```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center", fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time."}
+```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line()
 
@@ -355,7 +358,7 @@ change the font size, we use the `theme` function with the `text` argument:
 > Interested readers may consult the `theme` function documentation;
 > see the additional resources section at the end of this chapter.
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center",  fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center",  fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
   geom_line() +
   xlab("Year") +
@@ -388,7 +391,7 @@ to convert the character strings we provide to `c` to `date` vectors.
 > but is not loaded by it. 
 > Hence we need to load it separately in the code below.
 
-```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center",  fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994."}
+```{r 03-data-co2-line-3, warning = FALSE, message = FALSE, fig.height = 3.5, fig.width = 4.5, fig.align = "center",  fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ from 1990 to 1994."}
 library(lubridate)
 
 co2_line <- ggplot(co2_df, aes(x = date_measured, y = ppm)) +
@@ -505,7 +508,7 @@ We will begin with a scatter plot of the `mother_tongue` and `most_at_home` colu
 The resulting plot is shown in Figure \@ref(fig:03-mother-tongue-vs-most-at-home).
 \index{ggplot!geom\_point}
 
-```{r 03-mother-tongue-vs-most-at-home, fig.height=3.5, fig.width = 3.75, fig.align = "center", warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home, fig.height=5, fig.align = "center", warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
@@ -519,7 +522,7 @@ make the axes labels on the plots more readable.
 \index{escape character} We should also increase the font size to further 
 improve readability.
 
-```{r 03-mother-tongue-vs-most-at-home-labs, fig.height=3.8, fig.width = 4.5, fig.align = "center", warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
+```{r 03-mother-tongue-vs-most-at-home-labs, fig.height=5, fig.align = "center", warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (number of Canadian residents)",
@@ -584,7 +587,7 @@ to put commas in these numbers to increase their readability.
 We can do this in R by passing the `label_comma` function (from the `scales` package)
 to the `labels` argument of the `scale_x_log10` and `scale_x_log10` functions.
 
-```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.height=3.8, fig.width = 4.5, fig.align = "center",  fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
+```{r 03-mother-tongue-vs-most-at-home-scale, message = FALSE, warning =  FALSE, fig.height=5, fig.align = "center",  fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes."}
 library(scales)
 
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -641,7 +644,7 @@ Finally, we will edit the visualization to use the percentages we just computed
 units). Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props) displays
 the final result.
 
-```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.height=3.8, fig.width = 4.5, fig.align = "center",  warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
+```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.height=5, fig.align = "center",  warning=FALSE, fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
   labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
@@ -698,7 +701,7 @@ that the `category` column should color the points. Adding this argument will
 color the points according to their group and add a legend at the side of the
 plot. 
 
-```{r 03-scatter-color-by-category, warning=FALSE, fig.height=4, fig.width = 8, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
+```{r 03-scatter-color-by-category, warning=FALSE, fig.height=5, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
@@ -724,7 +727,7 @@ However, that will not work well for this particular visualization
 because the legend labels are quite long 
 and would run off the page if displayed this way.
 
-```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=5, fig.width = 5.5, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
+```{r 03-scatter-color-by-category-legend-edit, warning=FALSE, fig.height=5.5, fig.align = "center", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with the legend edited."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category)) +
@@ -770,7 +773,7 @@ this makes the scatter point shapes different for each category. This kind of
 visual redundancy&mdash;i.e., conveying the same information with both scatter point color and shape&mdash;can
 further improve the clarity and accessibility of your visualization.
 
-```{r scatter-color-by-category-palette, fig.height=5, fig.width = 5.5, fig.align = "center", warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
+```{r scatter-color-by-category-palette, fig.height=5.5, fig.align = "center", warning=FALSE,  fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home colored by language category with color-blind friendly colors."}
 ggplot(can_lang, aes(x = most_at_home_percent, 
                      y = mother_tongue_percent, 
                      color = category, 
