--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -992,6 +992,7 @@ clustered_data <- kmeans_fit |>
 clustered_data
 ```
 
+<!--
 If for some reason we need access to just the cluster assignments,
 we can extract those from the fit as a data frame using 
 the `extract_cluster_assignment` function. Note that in this case,
@@ -1001,6 +1002,7 @@ function earlier creates a variable named `.pred_cluster`.
 ```{r 10-kmeans-extract-clusterasgn}
 extract_cluster_assignment(kmeans_fit)
 ```
+-->
 
 Now that we have the cluster assignments included in the `clustered_data` tidy data frame, we can 
 visualize them as shown in Figure \@ref(fig:10-plot-clusters-2).
@@ -1044,7 +1046,9 @@ penguin_clust_ks <- tibble(num_clusters = 1:9)
 penguin_clust_ks
 ```
 
-Then 
+Then we construct our model specification again, this time 
+specifying that we want to tune the `num_clusters` parameter.
+
 ```{r 10-kmeans-spec-tune, message=FALSE, echo=TRUE, results=FALSE}
 kmeans_spec <- k_means(num_clusters = tune()) |>
     set_engine("stats")
@@ -1053,6 +1057,14 @@ kmeans_spec
 ```{r 10-kmeans-spec-tune-print, echo=FALSE}
 hidden_print(kmeans_spec)
 ```
+We combine the recipe and specification in a workflow, and then
+use the `tune_cluster` function to run K-means on each of the different
+settings of `num_clusters`. The `grid` argument controls which values of
+K we want to try&mdash;in this case, the values from 1 to 9 that are 
+stored in the `penguin_clust_ks` data frame. We set the `resamples`
+argument to `apparent(penguins)` to tell K-means to run on the whole
+data set for each value of `num_clusters`. Finally, we collect the results
+using the `collect_metrics` function.
 
 ```{r 10-kmeans-tune-results}
 kmeans_results <- workflow() |>
@@ -1062,20 +1074,22 @@ kmeans_results <- workflow() |>
     collect_metrics()
 kmeans_results
 ```
+The total WSSD results correspond to the `mean` column when the `.metric` variable is equal to `sse_within_total`.
+We can obtain a tidy data frame with this information using `filter` and `mutate`.
 
 ```{r 10-kmeans-next}
 kmeans_results <- kmeans_results |> 
     filter(.metric == "sse_within_total") |>
-    mutate(tot.withinss = mean) |>
-    select(num_clusters, tot.withinss)
+    mutate(total_WSSD = mean) |>
+    select(num_clusters, total_WSSD)
 kmeans_results
 ```
 
-Now that we have `tot.withinss` and `k` as columns in a data frame, we can make a line plot 
+Now that we have `total_WSSD` and `num_clusters` as columns in a data frame, we can make a line plot 
 (Figure \@ref(fig:10-plot-choose-k)) and search for the "elbow" to find which value of K to use. 
 
 ```{r 10-plot-choose-k, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A plot showing the total WSSD versus the number of clusters."}
-elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = tot.withinss)) +
+elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = total_WSSD)) +
   geom_point() +
   geom_line() +
   xlab("K") +
@@ -1086,19 +1100,55 @@ elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = tot.withinss)) +
 elbow_plot
 ```
 
-It looks like 3 clusters is the right choice for this data.
-But why is there a "bump" in the total WSSD plot here? 
-Shouldn't total WSSD always decrease as we add more clusters? 
-Technically yes, but remember:  K-means can get "stuck" in a bad solution. 
-Unfortunately, for K = 8 we had an unlucky initialization
+It looks like 3 clusters might be the right choice for this data.
+But why is the total WSSD plot a bit "bumpy" here? 
+Shouldn't total WSSD decrease more smoothly we add more clusters? 
+Usually yes, but remember:  K-means can get "stuck" in a bad solution. 
+Unfortunately, for a few values of K, we may have had an unlucky initialization
 and found a bad clustering! \index{K-means!restart, nstart} 
 We can help prevent finding a bad clustering 
 by trying a few different random initializations 
-via the `nstart` argument (Figure \@ref(fig:10-choose-k-nstart) 
-shows a setup where we use 10 restarts). 
-When we do this, K-means clustering will be performed 
-the number of times specified by the `nstart` argument,
-and R will return to us the best clustering from this.
+via the `nstart` argument in the model specification.
+Here we will try using 10 restarts.
+
+```{r 10-kmeans-spec-tune-2, message=FALSE, echo=TRUE, results=FALSE}
+kmeans_spec <- k_means(num_clusters = tune()) |>
+    set_engine("stats", nstart = 10)
+kmeans_spec
+```
+```{r 10-kmeans-spec-tune-print-2, echo=FALSE}
+hidden_print(kmeans_spec)
+```
+
+Now if we rerun the same workflow with the new model specification, 
+K-means clustering will be performed `nstart = 10` times for each value of K.
+The `collect_metrics` function will then pick the best clustering of the 10 runs for each value of K,
+and report the results for that best clustering.
+Figure \@ref(fig:10-choose-k-nstart) shows the resulting smoother total WSSD plot from using 10 restarts. 
+
+
+```{r 10-choose-k-nstart, fig.height = 3.25, fig.width = 4.25, fig.pos = "H", out.extra="", message= FALSE, warning = FALSE, fig.align = "center", fig.cap = "A plot showing the total WSSD versus the number of clusters when K-means is run with 10 restarts."}
+
+kmeans_results <- workflow() |>
+    add_recipe(kmeans_recipe) |>
+    add_model(kmeans_spec) |>
+    tune_cluster(resamples = apparent(penguins), grid = penguin_clust_ks) |>
+    collect_metrics() |>
+    filter(.metric == "sse_within_total") |>
+    mutate(total_WSSD = mean) |>
+    select(num_clusters, total_WSSD)
+
+elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = total_WSSD)) +
+  geom_point() +
+  geom_line() +
+  xlab("K") +
+  ylab("Total within-cluster sum of squares") +
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 12))
+
+elbow_plot
+```
+
 The more times we perform K-means clustering,
 the more likely we are to find a good clustering (if one exists).
 What value should you choose for `nstart`? The answer is that it depends
@@ -1108,67 +1158,6 @@ The larger the `nstart` value the better from an analysis perspective,
 but there is a trade-off that doing many clusterings 
 could take a long time.
 So this is something that needs to be balanced.
-
-```
-penguin_clust_ks <- tibble(k = 1:9) |>
-  rowwise() |>
-  mutate(penguin_clusts = list(kmeans(standardized_data, nstart = 10, k)),
-         glanced = list(glance(penguin_clusts)))
-
-clustering_statistics <- penguin_clust_ks |>
-  unnest(glanced)
-
-elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
-  geom_point() +
-  geom_line() +
-  xlab("K") +
-  ylab("Total within-cluster sum of squares") +
-  scale_x_continuous(breaks = 1:9) + 
-  theme(text = element_text(size = 12))
-
-elbow_plot
-```
-
-
-Testing monte carlo splits (w/o replacement)
-```{r}
-spls <- mc_cv(penguins, prop = 0.999, times = 4)
-```
-
-collect metrics without summaries so we can use min
-```{r}
-kmeans_results <- workflow() |>
-    add_recipe(kmeans_recipe) |>
-    add_model(kmeans_spec) |>
-    tune_cluster(resamples = spls, grid = penguin_clust_ks) |>
-    collect_metrics(summarize=FALSE)
-kmeans_results
-```
-
-minimize
-```{r}
-kmeans_results <- kmeans_results |>
-   filter(.metric == "sse_within_total") |>
-   group_by(num_clusters) |>
-   summarize(min_wssd = min(.estimate))
-kmeans_results
-```
-
-```{r 10-plot-choose-k-2, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "A plot showing the total WSSD versus the number of clusters."}
-elbow_plot <- ggplot(kmeans_results, aes(x = num_clusters, y = min_wssd)) +
-  geom_point() +
-  geom_line() +
-  xlab("K") +
-  ylab("Total within-cluster sum of squares") +
-  scale_x_continuous(breaks = 1:9) + 
-  theme(text = element_text(size = 12))
-
-elbow_plot
-```
-
-
-
-
 
 
 ## Exercises
